<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"

    >

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp">


        <ImageView
            android:id="@+id/korinsnik_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/korisnik_im"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/korime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:text="@string/korime"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/recenzija_opis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/korime"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:text="@string/recenzija_opis"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false" />


        <TextView
            android:id="@+id/textO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recenzija_opis"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:text="Ocjena: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/recenzija_ocjena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recenzija_opis"
            android:layout_toEndOf="@+id/textO"
            android:layout_toRightOf="@+id/textO"
            android:text="@string/recenzija_ocjena"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false" />


        <RatingBar
            android:id="@+id/recenzija_ocjena_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recenzija_ocjena"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:scaleX=".5"
            android:scaleY=".5"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp" />





    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="90dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/layout2"
        android:gravity="right"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_like_white_round"
                android:layout_gravity="right"
                android:layout_weight=".01"
                android:background="@null"
                android:paddingLeft="50dp"
                android:padding="5dp"
                />

            <TextView
                android:id="@+id/recenzija_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recenzija_opis"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="false"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/dislikeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_dislike_white_round"
                android:layout_gravity="left"
                android:layout_weight=".01"
                android:background="@null"
                android:padding="5dp"


                />

            <TextView
                android:id="@+id/recenzija_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recenzija_opis"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textIsSelectable="false" />
        </LinearLayout>


    </LinearLayout>




</androidx.cardview.widget.CardView>