<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DefaultZnamenitostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
            <ImageView
                android:id="@+id/imgNaslovnaSlika"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DefaultZnamenitostActivity"
        tools:showIn="@layout/activity_default_znamenitost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/text_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adresa"/>
                <TextView
                    android:id="@+id/txtAdresaZnamenitosti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:text="ADRESA"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lokacija"/>
                <TextView
                    android:id="@+id/txtLokacijaZnamenitosti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:text="LOKACIJA"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtOpisZnamenitosti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opis_text"
                android:layout_marginBottom="@dimen/text_margin"/>
            <!-- Od ovdje Galerija -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGalerija"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/text_margin"/>

            <!-- Od ovdje Recenzije -->

            <!-- Od ovdje Napiši svoju recenziju -->
            <TextView
                android:id="@+id/textNapisi"
                android:layout_width="385dp"
                android:layout_height="35dp"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="20dp"
                android:text="Napišite svoju recenziju:"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="Ocjena:" />
            <EditText
                android:id="@+id/upisiOcjenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:hint="@string/input_ocjena"
                android:inputType="text"
                android:textColor="#000"
                android:background="@drawable/inputs_line_black"
                android:drawablePadding="10dp"
                style="@style/input"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="Opis:" />
            <EditText
                android:id="@+id/upisiRecenziju"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:hint="@string/input_recenziju"
                android:inputType="text"
                android:textColor="#000"
                android:background="@drawable/inputs_line_black"
                android:drawablePadding="10dp"
                style="@style/input" />
            <Button
                android:id="@+id/upisiRecenzijuBtn"
                style="@style/YellowButton"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/upisiRecenzijuBtn"
                android:layout_gravity="center"/>

            <!-- Od ovdje tuđe Recenzije -->
            <TextView
                android:id="@+id/textRecenzija"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="20dp"
                android:text="Recenzije korisnika"/>
            <TextView
                android:id="@+id/textocjena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="Ocjene korisnika:" />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:isIndicator="true"
                android:id="@+id/sveOcjena"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="@dimen/text_margin"
                app:layout_constraintHorizontal_bias="0.189" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listaRecenzije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="@color/cardview_light_background"
                android:layout_marginBottom="@dimen/text_margin" />




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ico_heart" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>